<resources>
    <string name="app_name">Combatiendo Resistencia</string>
    <!-- Strings related to login -->
    <string name="username">Nombre</string>
    <string name="profesion">Profesión</string>
    <string name="title">Crear nuevo usuario</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Continuar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Nombre invalido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="appsecundariacriollo">Calibrar pulverizador Criollo</string>
    <string name="botoncriollo">botoncriollo</string>
    <string name="botonmalezas">botonmalezas</string>
    <string name="clima">Pronostico climatico</string>
    <string name="appsecundariamalezas">Deteccion de malizas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Combatiendo Resistencia</string>
    <string name="mainActivitytittle">Pantalla Principal</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Principal</string>
    <string name="menu_Malezas">Malezas</string>
    <string name="menu_Pulverizador">Pulverizador</string>
    <string name="menu_Paginas">Paginas informativas</string>
    <string name="menu_Acercade">Acerca De</string>
</resources>