<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_prin"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_malezas"
            android:title="@string/menu_Malezas" />
        <item
            android:id="@+id/nav_pulverizador"
            android:title="@string/menu_Pulverizador" />
        <item
            android:id="@+id/nav_pagnas"
            android:title="@string/menu_Paginas" />
        <item
            android:id="@+id/nav_Acerca_de"
            android:title="@string/menu_Acercade" />
    </group>
</menu>